--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Manolo Franco - Political Science</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Manolo Franco</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ManoloFranco.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Manolo Franco
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Political Science📚</div>
+        <p class="lead mb-4">I am a first year student at UCR studying poli sci looking to one day become a PI attorney. This dream of mine started after a knee injury I suffered during a high school football game. I had to get stem cell therapy and platelet-rich plasma therapy. I also had to maintain a serious regimen of physical therapy going four times a week.  At first, I hated going to physical therapy, but I ended up finding out that I would go more for my mental health than my knee. Football was my outlet and I felt that was taken from me. My physical therapist, Eli, helped me realize that was not true. He showed me that it was an experience that I had to go through to understand how to not just cope with a problem, but to strive to fix it no matter how bad the situation may seem. Eli became my best friend. I loved going to his office daily just to tell him how I was doing or how school went. In eleven weeks I healed an injury that keeps athletes out for at least eight months. <br><br>
 
-        Enter bio here<br><br>
+        I kept in touch with the doctor and he offered me a summer internship at his office. I became his front desk receptionist and I had a lot of responsibilities. I contacted patients daily to ensure they followed their physical therapy treatment plan. I also created new patient files and sorted old ones. I also had to assemble billing files and process payments. Most patients came in because of a work accident so I had to directly contact their attorneys to figure out what had to be done with their clients. Soon I realized that most attorneys don't care for their clients as long as they get paid. This stuck with me and I decided I wanted to become a PI attorney but I wanted to do it right.<br><br>
 
-        Enter bio here
+        I am responsible, hard-working, a fast leaner, and I work great with a team.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/ManoloFranco">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/manolofrancov">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:mfran071@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Front Desk</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Alpha Welness Center</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Interacted with patients upon their arrival<br> 
+              • Made new patient files and organized old ones<br>
+              • Used the doctor's own software to create bills for the patients<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2019 - October 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Youth Ministry Group Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Our Lady Of Grace Church</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Led group discussions and provided support for adolescents participating in our program<br>
+              • Directed reservations, agenda, and group activities during our yearly retreats<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2015 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Seargent at Arms BSU </h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Sherman Oaks CES</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Initiated club meetings with relevant announcements including the meeting’s agenda<br>
+            • Facilitated meetings by helping maintain order<br>
+            • Organized and executed club events including BSU Poetry Slam, a schoolwide Black History Month Celebration, and a field trip to California State University-Northridge
+<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2018 - June 2019</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Political Science</div>
+            <div>BA in Political Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2019-present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Sherman Oaks CES</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div>Hish school</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2015- June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Sherman Oaks CES</h3>
+            <div class="subheading mb-3">Middle School Diploma</div>
+            <div>Middle School</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2012 - June 2015</span>
           </div>
         </div>
 
